# webshield-cli

./: Cargo.toml  LICENSE  README.md  build-release.sh  install.sh
.github/workflows/: ci.yaml  release.yaml
src/: config.rs  i18n.rs  main.rs  output.rs
src/api/: _models.rs  client.rs  error.rs  get_url.rs  mod.rs  models.rs  request_desc.rs  table.rs
src/api/_models/: billing.rs  dns.rs  domain.rs  mod.rs  proxy.rs  sites.rs  stats.rs
src/api/models/: billing.rs  dns.rs  domain.rs  mod.rs  proxy.rs  sites.rs  stats.rs
src/commands/: auth.rs  billing.rs  dns.rs  domains.rs  mod.rs  proxy.rs  sites.rs  stats.rs  util.rs
src/commands/auth/: mod.rs
src/commands/billing/: mod.rs
src/commands/dns/: mod.rs  rr_type.rs
src/commands/domains/: mod.rs
src/commands/proxy/: mod.rs
src/commands/sites/: mod.rs
src/commands/stats/: mod.rs
src/util/: input.rs  output.rs
tests/: cli.rs
