[package]
name = "webshield-cli"
version = "1.0.1"
edition = "2021"
description = "Command-line client for WebShield (WAF, DNS, static sites)"
license = "MIT"
repository = "https://github.com/webshieldpro/webshield-cli"
homepage = "https://webshield.pro"

[[bin]]
name = "webshield"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
# tokio + reqwest (async): concurrent multipart file uploads during publishing.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"
walkdir = "2"
md-5 = "0.10"
hex = "0.4"
mime_guess = "2"
indicatif = "0.17"
comfy-table = "7"
console = "0.15"
rpassword = "7"
futures = "0.3"

[profile.release]
strip = true
lto = true
